<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#418bc6"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="1dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#418bc6"
                android:orientation="vertical"
                android:paddingBottom="24dp"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingTop="24dp" >

                <TextView
                    android:id="@+id/warn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/warning"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/autoCheckMarks"
                        android:textColor="#FFFFFF"
                        android:textSize="16dp" />

                    <ToggleButton
                        android:id="@+id/togglebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:onClick="onToggleClicked"
                        android:textOff="No"
                        android:textOn="Si"
                        android:textSize="16dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/infoActivateToSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/infoCheckMarks"
                    android:textColor="#7FFFF7"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/checkScheduling"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/sel_time" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveAndStart"
            android:text="@string/save" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>