<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#418bc6">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:background="#418bc6"
            android:orientation="vertical"
            android:padding="7dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="1dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:background="#418bc6"
                    android:orientation="vertical"
                    android:paddingBottom="24dp"
                    android:paddingLeft="9dp"
                    android:paddingRight="9dp"
                    android:paddingTop="24dp" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/logo_upc" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etNif"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintUser"
                        android:singleLine="true"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pass"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintPass"
                        android:password="true"
                        android:singleLine="true"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/cb_remember"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Guardar usuari"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="LoginClicked"
                        android:text="@string/login"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>